// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field with a  number input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx47aq8 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  width: 100%;
  padding: var(--space-3);
  transition: all 100ms ease-out;
}

.sx47aq8:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sx47aq8[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sxdiu5c {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxdiu5cjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxdiu5cjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxdiu5cjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxdiu5c-b2uuy {
  margin-bottom: var(--space-2);
}

<div>
  <div
    class="sx03kze sx03kze-6obnf"
  >
    <label
      class="sxdiu5c sxdiu5cjqqvr--size-md sxdiu5c-b2uuy"
      for="INPUT FIELD"
    >
      INPUT FIELD
    </label>
    <input
      class="sx47aq8"
      id="INPUT FIELD"
      inputmode="numeric"
      name="INPUT FIELD"
      pattern="[0-9]*"
      placeholder="001"
      type="text"
    />
  </div>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

.sx47aq8 {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  box-sizing: border-box;
  color: var(--colors-tonal900);
  cursor: text;
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  height: var(--sizes-4);
  width: 100%;
  padding: var(--space-3);
  transition: all 100ms ease-out;
}

.sx47aq8:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sx47aq8[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal700);
  cursor: not-allowed;
}

.sxdiu5c {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxdiu5cjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxdiu5cjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxdiu5cjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxdiu5c-b2uuy {
  margin-bottom: var(--space-2);
}

<div>
  <div
    class="sx03kze sx03kze-6obnf"
  >
    <label
      class="sxdiu5c sxdiu5cjqqvr--size-md sxdiu5c-b2uuy"
      for="INPUT FIELD"
    >
      INPUT FIELD
    </label>
    <input
      class="sx47aq8"
      id="INPUT FIELD"
      name="INPUT FIELD"
      placeholder="INPUT FIELD"
      type="text"
    />
  </div>
</div>
`;
